--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,81 +7,17 @@
   <%= csrf_meta_tags %>
   <%= render 'layouts/shiv'  %>
 </head>
-<body>
-	<header class="header-container header-type-classic header-navbar-inverse header-absolute header-transparent header-scroll-resize">
-		<div class="container">
-			<%= link_to "L", root_path, id: "logo"  %>
-			<nav>
-				<ul class="nav navbar-nav navbar-right">
-					<li class='dropdown'>
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Présentations <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><%= link_to "Hotel", '#' %></li>
-							<li><%= link_to "Restaurant", '#' %></li>
-						</ul>
-					</li>
-					<li class='dropdown'>
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Réservations <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><%= link_to "Hotel", '#' %></li>
-							<li><%= link_to "Restaurant", '#' %></li>
-							<li><%= link_to "Tarifs", '#' %></li>
-						</ul>
-					</li>					
-					<li><%= link_to "Accès et Contacts", '#' %></li>
-					<li><%= link_to "Tourisme", '#' %></li>
-				</ul>
-			</nav>
-		</div>
-		<div class=" center jumbotron">
-			<h1>Le Tout Va Bien</h1>
-			<p>Hotel Restaurant</p>
-			<span class="glyphicon glyphicon-star" aria-hidden="true"></span><span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-		</div>
-	</header>
+<body class="<%= 'homepage' if root_path %>">
 
+		<%= render 'layouts/top_nav' %>
+		<main class="">
+			<%= yield %>
+		</main>
 
-<div class="container">
-	<%= yield %>
-</div>
+	<%= render 'layouts/footer' %>
 
-<footer class="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4 left">
-				<h3>Adresse:</h3>
-				<h5>Hôtel Restaurant - LE TOUT VA BIEN</h5>
-			  <p>30, place Sylvain Dumon <br>
-			  82400 Valence d'Agen <br>
-			  RCS Montauban 530 087 790 <br>
-				<br>
-				letoutvabien935@orange.fr</p>
-			</div>
-			<div class="col-md-4 center">
-				<h3>Horaires d'ouverture:</h3>
-				<h5>HÔTEL OUVERT:</h5>
-				<p>Du lundi au vendredi de 7h à 21 h <br>
-				Permanence le Weekend (nous consulter).</p>
-
-				<h5>RESTAURANT :</h5>
-				<p>Du lundi au vendredi.</p>
-				<h6>Service de midi:</h6>
-				<p>De 12h à 13h30</p>
-				<h6>Service du soir:</h6>
-				<p>De 19h30 à 21h</p>
-			</div>
-			<div class="col-md-4 right">
-				<ul>
-					<h3>Navigation:</h3>
-					<li>Hotel</li>
-					<li>Restaurant</li>
-					<li>Tarifs</li>
-					<li>Accès et Contact</li>
-					<li>Tourisme</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</footer>
+<script src="//maps.google.com/maps/api/js?v=3.18&sensor=false&client=&key=&libraries=geometry&language=&hl=&region="></script> 
+<script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js"></script>
+<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/infobox/1.1.9/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 </body>
 </html>
