--- a/app/views/pages/access.html.erb
+++ b/app/views/pages/access.html.erb
@@ -1,3 +1,6 @@
+<% content_for(:navigation) do %>
+<% content_for(:nav_id, 'regular-nav') %>
+
 <div class="container">
 	<div style='width: 800px;'>
 	  <div id="map" style='width: 800px; height: 400px;'></div>
