--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,25 +1,10 @@
 <% provide(:title, 'Home' )%>
-<section class="description">
+<% content_for(:body_class, 'homepage') %>
+<% content_for(:nav_id, 'home-nav') %>
+
+<section id="description">
 	<p>L’hôtel – restaurant « Le Tout Va Bien » est heureux de vous accueillir en plein cœur de valence d’Agen, ville connue pour ses lavoirs et ses grandes places de marché couvertes.</p>
 
 	<p>Que vous soyez en balade ou en déplacement professionnel, Notre cuisine ou l’une des 21 chambres de notre hôtel pourra sûrement vous ravir. Disposant de TV écran plat, canal+ canal cinéma canal sport, clim réversible, télèphone-reveil, sèche cheveux, bain ou douche…</p>
-</section>
-
-<section class="opening">
-	<h3>HÔTEL OUVERT:</h3>
-	du lundi au vendredi de 7h à 21 h
-	Permanence le Weekend (nous consulter)
-
-	<h3>RESTAURANT :</h3>
-	Du lundi au vendredi
-</section>
-
-<section class="services">
-	<h3>Services GRATUITS à votre disposition</h3>
-	<ul>
-		<li>Connection wifi dans tout l’hôtel.</li>
-		<li>Accès handicapé dans tout l’établissement. 2 chambres sont specialements aménagées pour les personnes à mobilité réduite.</li>
-		<li>Accès parking (externe à l'Hôtel)</li>
-	</ul>	
 </section>
 
