--- a/app/views/pages/hotel_presentation.html.erb
+++ b/app/views/pages/hotel_presentation.html.erb
@@ -1,4 +1,6 @@
 <% provide(:title, 'Hotel') %>
+<% content_for(:nav_id, 'regular-nav') %>
+
 
 <section class="col-md-8 side-photo">
 	<%= image_tag("pillows.jpg") %>
