--- a/app/views/pages/links.html.erb
+++ b/app/views/pages/links.html.erb
@@ -1,2 +1,5 @@
+<% content_for(:navigation) do %>
+<% content_for(:nav_id, 'regular-nav') %>
+
 <h1>Pages#links</h1>
 <p>Find me in app/views/pages/links.html.erb</p>
