--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,11 @@
   <%= csrf_meta_tags %>
   <%= render 'layouts/shiv'  %>
 </head>
-<body class="<%= 'homepage' if root_path %>">
+<body class="<%= content_for :body_class %>">
 
-		<%= render 'layouts/top_nav' %>
+		
 		<main class="">
+			<%= render 'layouts/navigation' %>
 			<%= yield %>
 		</main>
 
