--- a/app/views/pages/restaurant_presentation.html.erb
+++ b/app/views/pages/restaurant_presentation.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'Restaurant') %>
+<% content_for(:nav_id, 'regular-nav') %>
 
 <section class="col-md-8 side-photo">
 	<%= image_tag('kitchen.jpg') %>
