--- a/app/views/pages/access.html.erb
+++ b/app/views/pages/access.html.erb
@@ -1,8 +1,38 @@
-<% content_for(:navigation) do %>
 <% content_for(:nav_id, 'regular-nav') %>
 
+<section class="col-md-8">
 <div class="container">
 	<div style='width: 800px;'>
 	  <div id="map" style='width: 800px; height: 400px;'></div>
 	</div>
 </div>
+</section>
+<aside class="col-md-4">
+	<h1>Plan et accès</h1>
+	<section>
+		<h3>Adresse</h3>
+		<p>Hôtel Le Tout va Bien <br>
+			30 place Sylvain Dumon <br>
+			82400 Valence d'Agen</p>
+		<p>Tel: 05.63.39.09.26 <br>
+			Fax: 05.63.39.72.68</p>
+		<hr>
+		
+		<h3>Accès</h3>
+		<p>GPS: Lat/Long 44.10889 / 0.8916127</p>
+		<p>Sortie d’autoroute N°8 - Valence d’Agen <br>
+		Au stop Prendre direction valence d’Agen <br>
+		(à gauche) puis direction centre ville.</p>
+
+		<ul>
+			<li>à 6km de la centrale de Golfech</li>
+			<li>à 45 min de Toulouse</li>
+			<li>à 30 min de Montauban</li>
+			<li>à 1h45 de Bordeaux</li>
+		</ul>
+
+		<p>Accessible également par le canal du midi (bateaux) ou par la piste verte (vélos) <br>
+		Par AVION: aéroport de Toulouse - Blagnac <br>
+		Par TRAIN: gare de valence d’Agen (5 min à pied de l’hôtel)</p>
+	</section>
+</aside>
