--- a/app/views/pages/hotel_presentation.html.erb
+++ b/app/views/pages/hotel_presentation.html.erb
@@ -6,6 +6,7 @@
 	<%= image_tag("pillows.jpg") %>
 </section>
 <aside class="col-md-4">
+	<h1>Nos chambres</h1>
 	<section>	
 		<h3>21 chambres à votre disposition.</h3>
 		<p>Elles sont équipées d'un écran plat avec accès Canal + Canal cinéma, Canal sport, clim réversible, téléphone, réveil, sèche cheveux, bain ou douche. 2 chambres sont spécialement aménagées pour les personnes à mobilité réduite.</p>
