--- a/app/views/pages/restaurant_presentation.html.erb
+++ b/app/views/pages/restaurant_presentation.html.erb
@@ -5,6 +5,7 @@
 	<%= image_tag('kitchen.jpg') %>
 </section>
 <aside class="col-md-4">
+	<h1>Nos tables</h1>
 	<section id="menu">
 		<h3>Menus & Formules</h3>
 		<ul>
@@ -21,7 +22,7 @@
 	<hr>
 
 	<section class="opening">
-		<h3>RESTAUTANT OUVERT :</h3>
+		<h3>Horaires d'ouverture :</h3>
 		<p>Du lundi au vendredi</p>
 
 		<h4>Service de midi : </h4>
