--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,23 +3,22 @@
 		<%= link_to "L", root_path, id: "logo"  %>
 		<nav>
 			<ul class="nav navbar-nav navbar-right">
-				<li><%= link_to "Home", root_path %></li>
+				<li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
 				<li class='dropdown'>
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Présentations <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><%= link_to "Hotel", hotel_presentation_path %></li>
-						<li><%= link_to "Restaurant", restaurant_presentation_path %></li>
+						<li class="<%= 'active' if current_page?(hotel_presentation_path) %>"><%= link_to "Hotel", hotel_presentation_path %></li>
+						<li class="<%= 'active' if current_page?(restaurant_presentation_path) %>"><%= link_to "Restaurant", restaurant_presentation_path %></li>
 					</ul>
 				</li>
 				<li class='dropdown'>
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Réservations <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><%= link_to "Hotel", '#' %></li>
-						<li><%= link_to "Restaurant", '#' %></li>
-						<li><%= link_to "Tarifs", '#' %></li>
+						<li><%= link_to "Chambre", '#' %></li>
+						<li class="<%= 'active' if current_page?(tarifs_path) %>"><%= link_to "Tarifs", tarifs_path %></li>
 					</ul>
 				</li>					
-				<li><%= link_to "Accès et Contacts", access_path %></li>
+				<li class="<%= 'active' if current_page?(access_path) %>"><%= link_to "Accès et Contacts", access_path %></li>
 				<li><%= link_to "Tourisme", '#' %></li>
 			</ul>
 		</nav>
