--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,21 @@
 <% provide(:title, 'Home' )%>
 <% content_for(:body_class, 'homepage') %>
 <% content_for(:nav_id, 'home-nav') %>
+<% content_for(:footer_id, 'home-footer') %>
 
-<section id="description">
-	<p>L’hôtel – restaurant « Le Tout Va Bien » est heureux de vous accueillir en plein cœur de valence d’Agen, ville connue pour ses lavoirs et ses grandes places de marché couvertes.</p>
 
-	<p>Que vous soyez en balade ou en déplacement professionnel, Notre cuisine ou l’une des 21 chambres de notre hôtel pourra sûrement vous ravir. Disposant de TV écran plat, canal+ canal cinéma canal sport, clim réversible, télèphone-reveil, sèche cheveux, bain ou douche…</p>
+<section id="description" class="container-fuild">
+	<div class="col-md-6 col-md-offset-3">
+		<div class="aligner-item">
+			<h1>Le Tout Va Bien</h1>
+			<p class="icon"><span class="glyphicon glyphicon-star" aria-hidden="true"></span><span class="glyphicon glyphicon-star" aria-hidden="true"></span></p>
+
+			<p>Nous sommes heureux de vous accueillir en plein cœur de valence d’Agen, ville connue pour ses lavoirs et ses grandes places de marché couvertes.</p>
+
+			<p>Que vous soyez en balade ou en déplacement professionnel, Notre cuisine ou l’une des 21 chambres de notre hôtel pourra sûrement vous ravir. Disposant de TV écran plat, canal+ canal cinéma canal sport, clim réversible, télèphone-reveil, sèche cheveux, bain ou douche…</p>
+		</div>		
+	</div>		
 </section>
+
+
 
