--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer id="<%= content_for :footer_id %>">
 	<div class="col-md-6 left">
-		<p id="adresse" class="left">Hôtel Restaurant - LE TOUT VA BIEN. 30, place Sylvain Dumon 82400 Valence d'Agen - RCS Montauban 530 087 790. letoutvabien935@orange.fr - 05.63.39.09.26.</p>		
+		<p id="adresse" class="left">Hôtel Restaurant - LE TOUT VA BIEN. 30 place Sylvain Dumon 82400 Valence d'Agen - RCS Montauban 530 087 790. letoutvabien935@orange.fr - 05.63.39.09.26.</p>		
 	</div>
 	<div class="col-md-6 right">
 		<p>Copyright &copy;2015. All rights reserved. Created by InkBuddha</p>
