--- a/app/views/pages/access.html.erb
+++ b/app/views/pages/access.html.erb
@@ -1,9 +1,10 @@
+<% provide(:title, 'Accès et Contact') %>
 <% content_for(:nav_id, 'regular-nav') %>
 
 <section class="col-md-8">
 <div class="container">
-	<div style='width: 800px;'>
-	  <div id="map" style='width: 800px; height: 400px;'></div>
+	<div>
+	  <div id="map" ></div>
 	</div>
 </div>
 </section>
@@ -19,7 +20,7 @@
 		<hr>
 		
 		<h3>Accès</h3>
-		<p>GPS: Lat/Long 44.10889 / 0.8916127</p>
+		<p>GPS: Lat/Long 44.10737 / 0.88878</p>
 		<p>Sortie d’autoroute N°8 - Valence d’Agen <br>
 		Au stop Prendre direction valence d’Agen <br>
 		(à gauche) puis direction centre ville.</p>
