--- a/app/views/pages/hotel_presentation.html.erb
+++ b/app/views/pages/hotel_presentation.html.erb
@@ -15,7 +15,7 @@
 	<hr>
 
 	<section class="services">
-		<h3>Services GRATUITS à votre disposition</h3>
+		<h3>Services gratuits à votre disposition:</h3>
 		<ul>
 			<li>Connection wifi dans tout l’hôtel.</li>
 			<li>Accès handicapé dans tout l’établissement.</li>
@@ -26,20 +26,13 @@
 	<hr>
 
 	<section class="opening">
-		<h3>HÔTEL OUVERT:</h3>
+		<h3>Horaires d'ouverture:</h3>
 		<p>du lundi au vendredi de 7h à 21 h
 		Permanence le Weekend (nous consulter)</p>
 
 		<h3>Petit déjeuner buffet :</h3>
-		<p>Du lundi au vendredi - 7h à 10h
-		Samedi et dimanche - 8h à 10h</p>
-	</section>
-
-	<hr>
-
-	<section>
-		<h3>Annulation/prepaiement :</h3>
-		<p>Toute annulation, si celle ci est faite 24 h avant votre arrivée, ne vous sera pas compté. Dans tout autre cas, il vous sera facturé la totalité de la nuitée.</p>
+		<p>Du lundi au vendredi de 7h à 10h
+		Samedi et dimanche de 8h à 10h</p>
 	</section>
 </aside>
 
