--- a/app/views/pages/links.html.erb
+++ b/app/views/pages/links.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:navigation) do %>
+<% content_for(:title, 'Tourisme') %>
 <% content_for(:nav_id, 'regular-nav') %>
 
-<h1>Pages#links</h1>
+<h1>Notre région</h1>
 <p>Find me in app/views/pages/links.html.erb</p>
