--- a/app/views/pages/tarifs.html.erb
+++ b/app/views/pages/tarifs.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, 'Tarifs') %>
 <% content_for(:nav_id, 'regular-nav') %>
 
 <section class="col-md-8 side-photo">
-	<%= image_tag("bedroom.jpg") %>
+	<%= image_tag("plate1.jpg") %>
 </section>
 <aside class="col-md-4 content">
 	<h1> Nos tarifs</h1>
