--- a/app/assets/stylesheets/base/_global.scss
+++ b/app/assets/stylesheets/base/_global.scss
@@ -29,6 +29,11 @@ body.homepage {
 	background-repeat: no-repeat;
 	background-position: center center fixed;
 	height: 89vh;
+	h1 {
+		font-family: 'Pinyon Script', cursive;
+		font-size: 4em;
+	}
+	span { padding-left: 10px; padding-right: 10px;}
 }
 
 // Top Nav
@@ -39,7 +44,6 @@ body.homepage {
 	margin-right: 2em;
 	text-transform: uppercase;
 	&:hover {
-		color: blue;
 		text-decoration: none;
 	}
 }
@@ -107,6 +111,10 @@ footer {
 	background-color: transparent;
 }
 
+#error-explanation {
+	h2 {text-align: center;}
+	
+}
 /* Content */
 
 #description {
@@ -124,6 +132,13 @@ footer {
 	height: 89vh;
 	overflow: hidden;
 	}
+}
+
+#map {
+	position: absolute;
+	left: 0;
+	width: 100%;
+	height: 89vh;
 }
 
 aside {
