--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,12 +14,12 @@
 				<li class='dropdown'>
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Réservations <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><%= link_to "Chambre", '#' %></li>
+						<li><%= link_to "Chambre", new_reservation_path %></li>
 						<li class="<%= 'active' if current_page?(tarifs_path) %>"><%= link_to "Tarifs", tarifs_path %></li>
 					</ul>
 				</li>					
 				<li class="<%= 'active' if current_page?(access_path) %>"><%= link_to "Accès et Contacts", access_path %></li>
-				<li><%= link_to "Tourisme", '#' %></li>
+				<li class="<%= 'active' if current_page?(links_path) %>"><%= link_to "Tourisme", links_path %></li>
 			</ul>
 		</nav>
 	</div>
