--- a/app/assets/stylesheets/base/_mixins.scss
+++ b/app/assets/stylesheets/base/_mixins.scss
@@ -1,3 +1,7 @@
+// Colors
+$firstcolor: #8d5524;
+$secondcolor: #c68642;
+
 // Mixins
 @mixin box_shadow {
 	-webkit-box-shadow: 0px 3px 7px -1px rgba(0,0,0,0.30);
