--- a/app/views/pages/access.html.erb
+++ b/app/views/pages/access.html.erb
@@ -22,8 +22,8 @@
 		<h3>Accès</h3>
 		<p>GPS: Lat/Long 44.10737 / 0.88878</p>
 		<p>Sortie d’autoroute N°8 - Valence d’Agen <br>
-		Au stop Prendre direction valence d’Agen <br>
-		(à gauche) puis direction centre ville.</p>
+		Au stop Prendre direction valence d’Agen (à gauche)<br>
+		puis direction centre ville.</p>
 
 		<ul>
 			<li>à 6km de la centrale de Golfech</li>
