--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
 <% content_for(:footer_id, 'home-footer') %>
 
 
-<section id="description" class="container-fuild">
+<section id="description" class="container">
 	<div class="col-md-6 col-md-offset-3">
 		<div class="aligner-item">
 			<h1>Le Tout Va Bien</h1>
@@ -11,7 +11,7 @@
 
 			<p>Nous sommes heureux de vous accueillir en plein cœur de valence d’Agen, ville connue pour ses lavoirs et ses grandes places de marché couvertes.</p>
 
-			<p>Que vous soyez en balade ou en déplacement professionnel, Notre cuisine ou l’une des 21 chambres de notre hôtel pourra sûrement vous ravir. Disposant de TV écran plat, canal+ canal cinéma canal sport, clim réversible, télèphone-reveil, sèche cheveux, bain ou douche…</p>
+			<p>Que vous soyez en balade ou en déplacement professionnel, Notre cuisine ou l’une des 21 chambres de notre hôtel pourra sûrement vous ravir.</p>
 		</div>		
 	</div>		
 </section>
