--- a/app/views/pages/access.html.erb
+++ b/app/views/pages/access.html.erb
@@ -1,14 +1,14 @@
 <% provide(:title, 'Accès et Contact') %>
 <% content_for(:nav_id, 'regular-nav') %>
 
-<section class="col-md-8">
+<section class="col-md-8 col-sm-12">
 <div class="container">
 	<div>
 	  <div id="map" ></div>
 	</div>
 </div>
 </section>
-<aside class="col-md-4">
+<aside class="col-md-4 col-sm-12">
 	<h1>Plan et accès</h1>
 	<section>
 		<h3>Adresse</h3>
