--- a/app/views/pages/restaurant_presentation.html.erb
+++ b/app/views/pages/restaurant_presentation.html.erb
@@ -1,12 +1,12 @@
 <% provide(:title, 'Restaurant') %>
 <% content_for(:nav_id, 'regular-nav') %>
 
-<section class="col-md-8 side-photo">
+<section class="col-md-8 col-sm-12 side-photo">
 	<%= image_tag('kitchen.jpg') %>
 </section>
-<aside class="col-md-4">
+<aside class="col-md-4 col-sm-12 ">
 	<h1>Nos tables</h1>
-	<section id="menu">
+	<section>
 		<h3>Menus & Formules</h3>
 		<ul>
 			<li>Menu Terroir <small>Entrée - Plat - Dessert</small></li>
@@ -31,6 +31,6 @@
 		<h4>Sercice du soir : </h4>
 		<p>19H 30 à 21H 00</p>
 
-		(Les horaires peuvent varier selon la fréquentation)
+		<p>(Les horaires peuvent varier selon la fréquentation)</p>
 	</section>
 </aside>
